Added a "blockquote" callout that the blog has moved to Medium.

--- a/blog.html
+++ b/blog.html
@@ -20,6 +20,10 @@ layout: default
 
 <h1>Ray Project Blog</h1>
 
+<blockquote>
+  <b>Note:</b> The Ray project blog has moved to <a href="https://medium.com/distributed-computing-with-ray">Medium</a>. That's where you'll find all new blog posts, but older posts will be maintained here.
+</blockquote>
+
 <ul class="posts">
   {% for post in site.posts %}
     <li>
